@@ -159,9 +159,21 @@ class FXfamily(object):
 _defaultFamily = FXfamily()
 
 
+####
+# Exceptions
+#
 
-class FXexception(TypeError):
+class FXexception(ArithmeticError):
+    """Base-class of exceptions generated by SPFPM operations"""
+
+class FXdomainError(FXexception):
+    """Signal that input argument of mathematical function is unsuitable"""
+
+class FXfamilyError(FXexception, TypeError):
     """Signal that family-types of FXnums in binary operation are mismatched"""
+
+class FXbrokenError(FXexception):
+    """Signal some form of internal error, e.g. broken logic"""
 
 
 
@@ -186,11 +198,17 @@ class FXnum(object):
     # conversion operations:
     def __int__(self):
         """Cast to (plain) integer"""
-        return int((self.scaledval + self.family.round) // self.family.scale)
+        if self.scaledval >= 0:
+            return int(self.scaledval // self.family.scale)
+        else:
+            return int((self.scaledval + self.family.scale - 1) // self.family.scale)
 
     def __long__(self):
         """Cast to long integer"""
-        return long((self.scaledval + self.family.round) // self.family.scale)
+        if self.scaledval >= 0:
+            return long(self.scaledval // self.family.scale)
+        else:
+            return long((self.scaledval + self.family.scale - 1) // self.family.scale)
 
     def __float__(self):
         """Cast to floating-point"""
@@ -201,7 +219,7 @@ class FXnum(object):
         if isinstance(other, FXnum):
             # binary operations must involve members of same family
             if not self.family is other.family:
-                raise FXexception, 1
+                raise FXfamilyError, 1
         else:
             # automatic casting from types other than FXnum is allowed:
             other = FXnum(other, self.family)
@@ -362,8 +380,11 @@ class FXnum(object):
 
     def sqrt(self):
         """Compute square-root of given number"""
+        if self.scaledval < 0:
+            raise FXdomainError
+        elif self.scaledval == 0:
+            return self
         # calculate crude initial approximation:
-        assert self.scaledval >= 0
         rt = FXnum(family=self.family)
         rt.scaledval = 1L << (self.family.fraction_bits // 2)
         val = self.scaledval
@@ -396,8 +417,11 @@ class FXnum(object):
 
     def log(self):
         """Compute (natural) logarithm of given number"""
+        if self.scaledval <= 0:
+            raise FXdomainError
+        elif self == 1:
+            return FXnum(0, self.family)
         thresh = FXnum(2, self.family)
-        assert self.scaledval > 0
         count = 0
         val = self
         while val > thresh:
@@ -430,7 +454,7 @@ class FXnum(object):
         elif idx == 1: sn = ang._rawQsine(True)
         elif idx == 2: sn = -ang._rawQsine(False)
         elif idx == 3: sn = -ang._rawQsine(True)
-        else: raise FXexception
+        else: raise FXbrokenError
         if reflect: sn *= -1
         return sn
 
@@ -438,9 +462,11 @@ class FXnum(object):
         """Compute inverse sine of given number"""
         if self == 1:
             return self.family.GetPi() / 2
+        elif self == -1:
+            return -self.family.GetPi() / 2
         else:
             cs2 = 1 - self * self
-            assert cs2 > 0
+            if cs2 < 0: raise FXdomainError
             return (self / cs2.sqrt()).atan()
 
     def cos(self):
@@ -451,17 +477,28 @@ class FXnum(object):
         elif idx == 1: cs = -ang._rawQsine(False)
         elif idx == 2: cs = -ang._rawQsine(True)
         elif idx == 3: cs = ang._rawQsine(False)
-        else: raise FXexception
+        else: raise FXbrokenError
         return cs
 
     def acos(self):
-        """Compute inverse sine of given number"""
-        if self == 1:
-            return FXnum(0, self.family)
+        """Compute inverse cosine of given number"""
+        arg = self
+        reflect = False
+        if self < 0:
+            arg *= -1
+            reflect = True
+        if arg == 1:
+            cs = FXnum(0, self.family)
+        elif arg == 0:
+            cs = self.family.GetPi() / 2
         else:
-            sn2 = 1 - self * self
-            assert sn2 > 0
-            return (sn2.sqrt() / self).atan()
+            sn2 = 1 - arg * arg
+            if sn2 < 0: raise FXdomainError
+            cs = (sn2.sqrt() / arg).atan()
+        if reflect:
+            return self.family.GetPi() - cs
+        else:
+            return cs
 
     def sincos(self):
         """Compute sine & cosine of given number (as angle in radians)"""
@@ -474,7 +511,7 @@ class FXnum(object):
         elif idx == 1: (sn, cs) = (ocs, -osn)
         elif idx == 2: (sn, cs) = (-osn, -ocs)
         elif idx == 3: (sn, cs) = (-ocs, osn)
-        else: raise FXexception
+        else: raise FXbrokenError
         if reflect: sn *= -1
         return (sn, cs)
 
