@@ -1,9 +1,0 @@
-ChangeLog
-distfiles
-LICENSE
-Makefile
-README.txt
-ToDo
-FixedPoint.py
-demo.py
-test/testFixedPoint.py
