@@ -1,5 +1,12 @@
 ChangeLog for Simple Python Fixed-Point Module
 
+03Feb07	- *** spfpm-0.4 released
+
+03Feb07	- patched rounding on cast to int/long to match behaviour of float-casts
+	added unit-test for sqrt() method
+	expanded set of exception classes, including domain-error etc
+	added unit-test for asin() & acos() methods
+
 02Feb07	- added demo/test/clean Makefile targets
 
 01Feb07	- added setup.py distutils-script
